# PointerSync

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/pointersync/: skeleton.py
tests/: conftest.py  test_skeleton.py
